// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleCollapse Should render as expected 1`] = `
<div>
  <div
    class="collapse"
    tabindex="0"
  >
    <div
      class="collapse-title cursor-pointer flex items-center justify-center px-4 bg-neutral text-neutral-content rounded-md transition-all duration-[1s]"
    >
      <p
        class="w-full text-lg"
      >
        test
      </p>
      <div
        class="items-end transition ease-in-out -rotate-90"
      >
        <svg
          aria-hidden="true"
          class="w-4 h-4"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0 bg-neutral text-neutral-content"
    />
  </div>
</div>
`;

exports[`SimpleCollapse Variants Respects accent variant 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 bg-accent text-accent-content rounded-md transition-all duration-[1s]"
>
  <p
    class="w-full text-lg"
  >
    testing accent variant
  </p>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`SimpleCollapse Variants Respects accent variant 2`] = `
<div
  class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0 bg-accent text-accent-content"
/>
`;

exports[`SimpleCollapse Variants Respects base-100 variant 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 bg-base-100 text-base-100-content rounded-md transition-all duration-[1s]"
>
  <p
    class="w-full text-lg"
  >
    testing base-100 variant
  </p>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`SimpleCollapse Variants Respects base-100 variant 2`] = `
<div
  class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0 bg-base-100 text-base-100-content"
/>
`;

exports[`SimpleCollapse Variants Respects base-200 variant 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 bg-base-200 text-base-200-content rounded-md transition-all duration-[1s]"
>
  <p
    class="w-full text-lg"
  >
    testing base-200 variant
  </p>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`SimpleCollapse Variants Respects base-200 variant 2`] = `
<div
  class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0 bg-base-200 text-base-200-content"
/>
`;

exports[`SimpleCollapse Variants Respects base-300 variant 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 bg-base-300 text-base-300-content rounded-md transition-all duration-[1s]"
>
  <p
    class="w-full text-lg"
  >
    testing base-300 variant
  </p>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`SimpleCollapse Variants Respects base-300 variant 2`] = `
<div
  class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0 bg-base-300 text-base-300-content"
/>
`;

exports[`SimpleCollapse Variants Respects error variant 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 bg-error text-error-content rounded-md transition-all duration-[1s]"
>
  <p
    class="w-full text-lg"
  >
    testing error variant
  </p>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`SimpleCollapse Variants Respects error variant 2`] = `
<div
  class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0 bg-error text-error-content"
/>
`;

exports[`SimpleCollapse Variants Respects error variant 3`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 bg-error text-error-content rounded-md transition-all duration-[1s]"
>
  <p
    class="w-full text-lg"
  >
    testing error variant
  </p>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`SimpleCollapse Variants Respects error variant 4`] = `
<div
  class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0 bg-error text-error-content"
/>
`;

exports[`SimpleCollapse Variants Respects info variant 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 bg-info text-info-content rounded-md transition-all duration-[1s]"
>
  <p
    class="w-full text-lg"
  >
    testing info variant
  </p>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`SimpleCollapse Variants Respects info variant 2`] = `
<div
  class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0 bg-info text-info-content"
/>
`;

exports[`SimpleCollapse Variants Respects info variant 3`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 bg-info text-info-content rounded-md transition-all duration-[1s]"
>
  <p
    class="w-full text-lg"
  >
    testing info variant
  </p>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`SimpleCollapse Variants Respects info variant 4`] = `
<div
  class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0 bg-info text-info-content"
/>
`;

exports[`SimpleCollapse Variants Respects neutral variant 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 bg-neutral text-neutral-content rounded-md transition-all duration-[1s]"
>
  <p
    class="w-full text-lg"
  >
    testing neutral variant
  </p>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`SimpleCollapse Variants Respects neutral variant 2`] = `
<div
  class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0 bg-neutral text-neutral-content"
/>
`;

exports[`SimpleCollapse Variants Respects primary variant 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 bg-primary text-primary-content rounded-md transition-all duration-[1s]"
>
  <p
    class="w-full text-lg"
  >
    testing primary variant
  </p>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`SimpleCollapse Variants Respects primary variant 2`] = `
<div
  class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0 bg-primary text-primary-content"
/>
`;

exports[`SimpleCollapse Variants Respects secondary variant 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 bg-secondary text-secondary-content rounded-md transition-all duration-[1s]"
>
  <p
    class="w-full text-lg"
  >
    testing secondary variant
  </p>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`SimpleCollapse Variants Respects secondary variant 2`] = `
<div
  class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0 bg-secondary text-secondary-content"
/>
`;

exports[`SimpleCollapse Variants Respects success variant 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 bg-success text-success-content rounded-md transition-all duration-[1s]"
>
  <p
    class="w-full text-lg"
  >
    testing success variant
  </p>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`SimpleCollapse Variants Respects success variant 2`] = `
<div
  class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0 bg-success text-success-content"
/>
`;

exports[`SimpleCollapse Variants Respects success variant 3`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 bg-success text-success-content rounded-md transition-all duration-[1s]"
>
  <p
    class="w-full text-lg"
  >
    testing success variant
  </p>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`SimpleCollapse Variants Respects success variant 4`] = `
<div
  class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0 bg-success text-success-content"
/>
`;

exports[`SimpleCollapse Variants Respects warning variant 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 bg-warning text-warning-content rounded-md transition-all duration-[1s]"
>
  <p
    class="w-full text-lg"
  >
    testing warning variant
  </p>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`SimpleCollapse Variants Respects warning variant 2`] = `
<div
  class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0 bg-warning text-warning-content"
/>
`;

exports[`SimpleCollapse Variants Respects warning variant 3`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 bg-warning text-warning-content rounded-md transition-all duration-[1s]"
>
  <p
    class="w-full text-lg"
  >
    testing warning variant
  </p>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`SimpleCollapse Variants Respects warning variant 4`] = `
<div
  class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0 bg-warning text-warning-content"
/>
`;
